--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,6 +6,7 @@
 
     <!--Toolbar-->
     <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbarRegister"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@color/colorPrimary"
         android:layout_width="match_parent"
@@ -13,6 +14,7 @@
 
     <!--Content-->
     <LinearLayout
+        android:shape="oval"
         android:padding="20dp"
         android:layout_margin="@dimen/margin"
         android:background="#50000000"
@@ -23,13 +25,16 @@
 
     <!--Avata-->
     <ImageView
+        android:scaleType="centerInside"
+        android:id="@+id/imvAvata"
         android:layout_gravity="center_horizontal"
         android:src="@drawable/image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="200dp"
+        android:layout_height="180dp" />
 
     <!--Name-->
     <EditText
+        android:id="@+id/edtName"
         android:background="@drawable/display_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -37,12 +42,14 @@
 
     <!--User-->
     <EditText
+        android:id="@+id/edtUser"
         android:background="@drawable/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <!--Password-->
     <EditText
+        android:id="@+id/edtPassword"
         android:background="@drawable/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
